test/integration/bad/functions-bad31.stan
functions {
  real gen(real true) {
    return 1;
  }
}
